<resources>
    <string name="app_name">Hibernia Sino</string>
    <string name="title_activity_home_page">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_home">Claim</string>
    <string name="title_dashboard">Item</string>
    <string name="title_notifications">Services</string>

    <string name="chat_back">BACK</string>
    <string name="chat_input">Input Message...</string>
    <string name="chat_send">Send</string>
    <string name="cp_title">Personal Information</string>
    <string name="cp_edit">Edit</string>
    <string name="contact_client">CLIENT</string>
    <string name="ewelcome_process">PROCESSING</string>
    <string name="ewelcome_approve">APPROVING</string>
    <string name="ewelcome_deny">DENYING</string>
    <string name="ewelcome_message">MESSAGING</string>
    <string name="image_zoom">Image Preview</string>
    <string name="login_login">LOGIN</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_register">Register</string>
    <string name="login_enter">Login</string>
    <string name="perfect_title">Personal Info</string>
    <string name="perfect_skip">SKIP</string>
    <string name="Perfect_gallery">gallery</string>
    <string name="perfect_gender">Gender</string>
    <string name="Perfect_male">Male</string>
    <string name="Perfect_female">Female</string>
    <string name="Perfect_phone">Phone</string>
    <string name="Perfect_email">Email</string>
    <string name="Perfect_db">Date of Birth</string>
    <string name="Perfect_db2">DD/MM/YYYY</string>
    <string name="Perfect_submit">Submit information</string>
    <string name="register_title">Registration</string>
    <string name="register_username">Username: please enter your username</string>
    <string name="register_password">Password :6-16 characters, case sensitive</string>
    <string name="register_password2">Password: please enter your password again</string>
    <string name="register_verification">Verification:enter 4-bit code</string>
    <string name="register_complete">complete</string>
    <string name="register_warn">By registering, you agree to the user agreement</string>
    <string name="item_capture">capture</string>
    <string name="item_gallery">gallery</string>
    <string name="item_name">item name</string>
    <string name="item_price">item price(000.00)</string>
    <string name="item_desc">description(color,size,brand,purchasing date...)</string>
    <string name="item_cancel">CANCEL</string>
    <string name="claim_title">Claim For Compensation</string>
    <string name="claim_subtitle1">1.Personal Information</string>
    <string name="claim_itemid">Item_ID:</string>
    <string name="claim_name">ItemName:</string>
    <string name="claim_uname">UserName:</string>
    <string name="claim_desc">Describe:</string>
    <string name="claim_subtitle2">2.Complete Information</string>
    <string name="claim_ld">Lost_Date:</string>
    <string name="im_title">Please enter your password to enable instant messaging</string>
    <string name="im_password">password</string>
    <string name="nonim_info">Only the last 3 messages are displayed</string>
    <string name="nonim_input">Please write down your questions</string>
    <string name="logout">log out</string>
    <string name="update_title">item information</string>
    <string name="update_id">itemID:</string>
    <string name="update_price">Price:</string>
    <string name="update_name">ItemName:</string>
    <string name="update_uname">UserName:</string>
    <string name="update_ld">LostDate:</string>
    <string name="update_desc">ItemDesc:</string>
    <string name="update_approve">Approving</string>
    <string name="update_deny">Denying</string>
    <string name="cc_orderno">Order No.：</string>
    <string name="cc_itemno">Item No.：</string>
    <string name="cc_dol">Date of loss：</string>
    <string name="cc_ostatus">Order Status：</string>
    <string name="cc_btn">Send feedback</string>
    <string name="lo_orderno">OrderNo:</string>
    <string name="lo_orderdate">OrderDate:</string>
    <string name="lo_itemid">ItemID:</string>
    <string name="lo_uname">UserName:</string>
    <string name="lo_state">Status:</string>
    <string name="lo_ld">LostDate:</string>
    <string name="recycler_itemno">ItemNo:</string>
    <string name="recycler_itemname">ItemName:</string>
    <string name="recycler_price">ItemPrice:</string>
    <string name="recycler_desc">ItemDesc:</string>
    <string name="recycler_send">Send Report</string>
    <string name="Import">Import</string>
    <string name="Gallery">Gallery</string>
    <string name="Slideshow">Slideshow</string>
    <string name="Tools">Tools</string>
    <string name="Communicate">Communicate</string>
    <string name="Personal">Personal</string>
    <string name="Send">Send</string>
    <string name="Warning">WARNING</string>
    <string name="Warning_Message">Are you sure you want to quit? Quitting will no longer receive customer service messages</string>
    <string name="commit">commit</string>
    <string name="cancel">cancel</string>
    <string name="Claim_Card">Claim Card</string>





</resources>
