<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_action_user_purple" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/perfect_title"
            android:textSize="20dp"
            android:textColor="@color/color_white"
            android:layout_gravity="center"
            android:paddingStart="15dp"/>

        <TextView
            android:id="@+id/complete_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/perfect_skip"
            android:textSize="18dp"
            android:layout_gravity="center"
            android:gravity="end"
            android:textColor="@color/color_white"
            android:paddingEnd="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/complete_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_action_add_yellow" />

        <Button
            android:id="@+id/complete_buttonIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Perfect_gallery"
            android:textColor="@color/color_white"
            android:background="@color/colorPrimary"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/perfect_gender"
            android:layout_gravity="center"
            android:textSize="22dp"/>

        <RadioGroup
            android:id="@+id/complete_rGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingStart="15dp">

            <RadioButton
                android:id="@+id/complete_rBtn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Perfect_male"
                android:layout_gravity="center"
                android:textSize="18dp"/>

            <RadioButton
                android:id="@+id/complete_rBtn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Perfect_female"
                android:layout_gravity="center"
                android:textSize="18dp"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/complete_spinner"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/complete_til1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:hintTextAppearance="@style/text_input_layout"
            app:counterEnabled="true"
            app:counterMaxLength="11"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/errorAppearance"
            app:counterOverflowTextAppearance="@style/counterOverFlowAppearance"
            app:counterTextAppearance="@style/counterAppearance">

            <EditText
                android:id="@+id/complete_et1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Perfect_phone"
                android:layout_gravity="center"
                android:ems="10"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/complete_til2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:hintTextAppearance="@style/text_input_layout"
            app:counterEnabled="true"
            app:counterMaxLength="40"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/errorAppearance"
            app:counterOverflowTextAppearance="@style/counterOverFlowAppearance"
            app:counterTextAppearance="@style/counterAppearance">

            <EditText
                android:id="@+id/complete_et2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Perfect_email"
                android:ems="10"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/Perfect_db"
            android:layout_gravity="center"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/complete_buttonDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Perfect_db2"
            android:textColor="@color/color_white"
            android:background="@color/colorPrimary"
            android:layout_weight="1"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/complete_buttonSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Perfect_submit"
        />

</LinearLayout>
