<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_title"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:textSize="25sp"
        android:textColor="@color/colorAccent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/Edialog_icon"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:scaleType="fitXY"
            android:layout_marginEnd="5dp"
            android:layout_gravity="center_vertical"
            app:srcCompat="@mipmap/ic_launcher" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/update_id"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/Edialog_itemid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12"
                    android:layout_weight="7"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/update_price"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/Edialog_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12.99"
                    android:layout_weight="7"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/update_name"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/Edialog_itemname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Bag33"
                    android:layout_weight="7"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/update_uname"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/Edialog_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Markjhg"
                    android:layout_weight="7"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/update_ld"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/Edialog_lostdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2019-12-12"
                    android:layout_weight="7"
                    android:textSize="20sp" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:text="@string/update_desc" />

    <TextView
        android:id="@+id/Edialog_itemdesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="5dp"
        android:text="abcdefghijklmnopnrstuvwxyzjdjdjfhbfhbfhhbdfhhfbfhhbbhvhbhhhhhfhbfb" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Edialog_btndeny"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/color_error"
            android:background="@drawable/button_style"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/update_deny" />

        <Button
            android:id="@+id/Edialog_btnapprove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/color_success"
            android:background="@drawable/button_style"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/update_approve" />
    </LinearLayout>


</LinearLayout>
