<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="6dp">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="0,1,2,3">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingEnd="5dp"
                android:textSize="16sp"
                android:text="@string/lo_orderno" />

            <TextView
                android:id="@+id/Eli_orderno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingStart="10dp"
                android:text="TextView" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:gravity="end"
                android:paddingEnd="5dp"
                android:text="@string/lo_orderdate" />

            <TextView
                android:id="@+id/Eli_orderdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingStart="10dp"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:gravity="end"
                android:paddingEnd="5dp"
                android:text="@string/lo_itemid" />

            <TextView
                android:id="@+id/Eli_itemid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingStart="10dp"
                android:text="TextView" />
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:gravity="end"
                android:paddingEnd="5dp"
                android:text="@string/lo_uname" />

            <TextView
                android:id="@+id/Eli_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingStart="10dp"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:gravity="end"
                android:paddingEnd="5dp"
                android:text="@string/lo_state" />

            <TextView
                android:id="@+id/Eli_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingStart="10dp"
                android:text="TextView" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:gravity="end"
                android:paddingEnd="5dp"
                android:text="@string/lo_ld" />

            <TextView
                android:id="@+id/Eli_lostdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingStart="10dp"
                android:text="TextView" />
        </TableRow>
    </TableLayout>
</LinearLayout>
